Reimplement urlToUri method, by decomposing the URL and reforming it   using one of the multi-argument URI constructors, which do all the   required escaping.  At the same time, make the javadoc less evasive. Add URLUtilsTest class